--- a/index.html
+++ b/index.html
@@ -2,263 +2,202 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WebX IoT - Smart Store</title>
+  <title>WebX IoT - Home</title>
   <style>
     * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
       color: white;
+      text-align: center;
+      background: url('https://images.unsplash.com/photo-1603791440384-56cd371ee9a7') no-repeat center center fixed;
+      background-size: cover;
     }
 
     header {
-      text-align: center;
-      padding: 30px 10px;
-      background: rgba(0, 0, 0, 0.5);
+      padding: 60px 20px 20px;
+      background: rgba(0, 0, 0, 0.6);
     }
 
-    h1 {
+    header h1 {
+      font-size: 3rem;
       margin: 0;
-      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+
+    .quote-box {
+      margin: 30px auto 20px;
+      font-style: italic;
+      font-size: 1.1rem;
+      max-width: 600px;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 15px;
+      border-radius: 10px;
+    }
+
+    .offers {
+      background: #ff4757;
+      color: white;
+      padding: 12px;
+      font-size: 1.1rem;
+      margin: 20px auto;
+      border-radius: 8px;
+      max-width: 700px;
+      animation: blink 1.2s infinite alternate;
+    }
+
+    @keyframes blink {
+      from { background-color: #ff4757; }
+      to { background-color: #ff6b81; }
+    }
+
+    .shop-button {
+      background: #2ecc71;
+      padding: 15px 30px;
+      border: none;
+      font-size: 1.2rem;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      margin: 30px auto 50px;
+      transition: 0.3s;
+    }
+
+    .shop-button:hover {
+      background: #27ae60;
+    }
+
+    .product-section {
+      padding: 30px 15px;
+      background: rgba(0, 0, 0, 0.4);
     }
 
     .product-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
-      padding: 30px;
+      max-width: 1000px;
+      margin: auto;
     }
 
-    .product {
+    .product-card {
       background: white;
       color: black;
+      padding: 15px;
       border-radius: 10px;
       text-align: center;
-      padding: 10px;
-      transition: transform 0.2s;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
 
-    .product:hover {
-      transform: scale(1.03);
-    }
-
-    .product img {
+    .product-card img {
       width: 100%;
-      height: 130px;
+      height: 150px;
       object-fit: cover;
       border-radius: 8px;
-    }
-
-    .product button {
-      margin: 5px;
-      padding: 8px 12px;
-      background: #27ae60;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .cart-icon {
-      position: fixed;
-      top: 15px;
-      right: 15px;
-      background: #e74c3c;
-      padding: 12px;
-      border-radius: 50%;
-      cursor: pointer;
-      font-size: 20px;
-      z-index: 999;
-    }
-
-    #cartPage {
-      display: none;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.7);
-      min-height: 100vh;
-    }
-
-    .cart-items {
-      margin-bottom: 15px;
-    }
-
-    .cart-item {
-      display: flex;
-      justify-content: space-between;
-      background: #333;
-      padding: 10px;
-      border-radius: 5px;
       margin-bottom: 10px;
-    }
-
-    .cart-item button {
-      background: #e74c3c;
-      padding: 5px 8px;
-      border-radius: 5px;
-      border: none;
-      color: white;
-    }
-
-    .billing-form input {
-      display: block;
-      margin: 10px auto;
-      padding: 10px;
-      width: 90%;
-      max-width: 400px;
-      border-radius: 5px;
-      border: none;
-    }
-
-    .success {
-      font-size: 1.2rem;
-      color: #2ecc71;
-      margin-top: 20px;
-      text-align: center;
-    }
-
-    .back-btn {
-      margin-top: 15px;
-      background: #3498db;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      color: white;
       cursor: pointer;
     }
 
-    /* Splash Screen */
-    #splash {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      z-index: 9999;
+    .product-card h3 {
+      margin: 10px 0 5px;
+      font-size: 1.1rem;
+    }
+
+    .product-card p {
+      margin: 5px 0;
+      font-weight: bold;
+      color: green;
+    }
+
+    footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #aaa;
+      padding-bottom: 20px;
+      background: rgba(0,0,0,0.6);
     }
   </style>
 </head>
 <body>
 
-<!-- Splash Screen -->
-<div id="splash">Loading WebX IoT cart...</div>
-
-<!-- Floating Cart Icon -->
-<div class="cart-icon" onclick="openCart()">🛒</div>
-
 <header>
   <h1>🌐 WebX IoT</h1>
-  <p>Your Smart Gadget Hub</p>
+  <p>Your one-stop shop for smart gadgets & tech deals</p>
 </header>
 
-<!-- Product Section -->
-<div class="product-grid" id="productPage">
-  <div class="product">
-    <img src="https://m.media-amazon.com/images/I/61N6HkFupUL._AC_SL1500_.jpg">
-    <h3>Smart Watch</h3>
-    <p>₹2499</p>
-    <button onclick="addToCart('Smart Watch', 2499)">Add</button>
-  </div>
-  <div class="product">
-    <img src="https://m.media-amazon.com/images/I/71rkWWvvNKL._AC_SX444_SY639_FMwebp_QL65_.jpg">
-    <h3>Earbuds</h3>
-    <p>₹1799</p>
-    <button onclick="addToCart('Earbuds', 1799)">Add</button>
-  </div>
-  <div class="product">
-    <img src="https://m.media-amazon.com/images/I/61BffdOf7vL._AC_SX444_SY639_FMwebp_QL65_.jpg">
-    <h3>Fitness Band</h3>
-    <p>₹1199</p>
-    <button onclick="addToCart('Fitness Band', 1199)">Add</button>
-  </div>
+<div class="quote-box" id="quoteBox">
+  "Technology is best when it brings people together." – Matt Mullenweg
 </div>
 
-<!-- Fake Billing Page -->
-<div id="cartPage">
-  <h2>🧾 Your Cart</h2>
-  <div class="cart-items" id="cartItems"></div>
-  <p style="font-size:1.2rem;"><strong>Total: ₹<span id="totalAmount">0</span></strong></p>
-
-  <h3>🏠 Delivery Details</h3>
-  <div class="billing-form">
-    <input type="text" placeholder="Your Name" id="name">
-    <input type="text" placeholder="Address" id="address">
-    <input type="text" placeholder="Pincode" id="pin">
-    <button onclick="submitOrder()">Buy Now</button>
-    <button class="back-btn" onclick="goBack()">⬅ Back to Shop</button>
-  </div>
-
-  <div id="successMessage" class="success hidden">✅ Order placed! Redirecting...</div>
+<div class="offers">
+  🎉 Bumper Sale: Flat 25% OFF with Code <strong>SAVE25</strong> – Limited Time Only!
 </div>
+
+<div class="offers">
+  🔥 Hot Offer: Buy 1 Smart Watch & Get 50% OFF on Wireless Earbuds!
+</div>
+
+<button class="shop-button" onclick="goToCart()">🛍️ Explore Products</button>
+
+<!-- 🧾 Product Section -->
+<section class="product-section">
+  <h2 style="margin-bottom: 30px;">🛍️ Featured Products</h2>
+  <div class="product-grid">
+
+    <div class="product-card">
+      <img src="https://www.teckpot.com/cdn/shop/files/fb523rgrd-frcjk_2_jpg_994x994.jpg?v=1747397782" alt="Smart Watch" onclick="goToCart()">
+      <h3>Smart Watch</h3>
+      <p>₹2499</p>
+    </div>
+
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/71rkWWvvNKL._AC_SX444_SY639_FMwebp_QL65_.jpg" alt="Wireless Earbuds" onclick="goToCart()">
+      <h3>Wireless Earbuds</h3>
+      <p>₹1799</p>
+    </div>
+
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/G/31/img24hp/home/audio/revamp/1_Nav_Tiles_400x400._CB556422013_.jpg" alt="Smart Speaker" onclick="goToCart()">
+      <h3>Smart Speaker</h3>
+      <p>₹3499</p>
+    </div>
+
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/61BffdOf7vL._AC_SX444_SY639_FMwebp_QL65_.jpg" alt="Fitness Band" onclick="goToCart()">
+      <h3>Fitness Band</h3>
+      <p>₹1199</p>
+    </div>
+
+  </div>
+</section>
+
+<footer>
+  <p>&copy; 2025 WebX IoT. Smart Tech, Smarter Shopping.</p>
+</footer>
 
 <script>
-  let cart = [];
+  const quotes = [
+    "“Technology is best when it brings people together.” – Matt Mullenweg",
+    "“The science of today is the technology of tomorrow.” – Edward Teller",
+    "“It’s not a faith in technology. It’s faith in people.” – Steve Jobs",
+    "“IoT is not a concept; it is a network, the true technology revolution.”",
+    "“Your gadget’s IQ is rising. Are you ready?” – WebX Team"
+  ];
 
-  // Splash screen
-  window.addEventListener("load", () => {
-    setTimeout(() => {
-      document.getElementById("splash").style.display = "none";
-    }, 1500);
-  });
-
-  function addToCart(name, price) {
-    cart.push({ name, price });
-    alert(name + " added to cart!");
+  function showRandomQuote() {
+    const quoteBox = document.getElementById("quoteBox");
+    const random = quotes[Math.floor(Math.random() * quotes.length)];
+    quoteBox.innerText = random;
   }
 
-  function openCart() {
-    document.getElementById("productPage").style.display = "none";
-    document.getElementById("cartPage").style.display = "block";
-    updateCartDisplay();
-    window.scrollTo(0, 0);
-  }
+  setInterval(showRandomQuote, 5000);
 
-  function goBack() {
-    document.getElementById("productPage").style.display = "grid";
-    document.getElementById("cartPage").style.display = "none";
-  }
-
-  function updateCartDisplay() {
-    const cartItemsDiv = document.getElementById("cartItems");
-    cartItemsDiv.innerHTML = '';
-    let total = 0;
-
-    cart.forEach((item, index) => {
-      total += item.price;
-      cartItemsDiv.innerHTML += `
-        <div class="cart-item">
-          ${item.name} - ₹${item.price}
-          <button onclick="removeFromCart(${index})">Remove</button>
-        </div>
-      `;
-    });
-
-    document.getElementById("totalAmount").innerText = total;
-  }
-
-  function removeFromCart(index) {
-    cart.splice(index, 1);
-    updateCartDisplay();
-  }
-
-  function submitOrder() {
-    const name = document.getElementById("name").value;
-    const address = document.getElementById("address").value;
-    const pin = document.getElementById("pin").value;
-
-    if (name && address && pin) {
-      document.getElementById("successMessage").classList.remove("hidden");
-      setTimeout(() => {
-        window.location.href = "https://webxiot.netlify.app"; // Change to your link
-      }, 3000);
-    } else {
-      alert("Please fill all fields!");
-    }
+  function goToCart() {
+    window.location.href = "https://carti.netlify.app";
   }
 </script>
 
